FIxed css issues in home page: -Fixed Card Content spacing -FIxed the Card placing in main screen -changes start and rupee icon to be picked from fontawesome css

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -5,18 +5,19 @@
 }
 
 .gridList {
-    margin: 'auto'
+    width: 100%;
+    display: flex; 
+    justify-content : 'space-around';
 }
 
 .card {
-    width: 250px;
-    max-width: 250px;
+    width: auto;
     height: 340px;
     max-height: 340px;
     margin-top: 15px;
     margin-bottom: 10px;
     margin-left: 25px;
-    margin-right: 5px;
+    margin-right: 10px;
     padding-bottom: 15px;
     cursor: 'pointer';
 }
@@ -25,28 +26,15 @@
     height: 140px
 }
 
-.name {
-    margin-bottom: 20px
+.cardContent {
+    height: 200px
 }
 
-.ratingAvgRateDiv {
-  background-color: yellow;
-  color: white;
-  margin: 10px;
+.restaurantName {
+  min-height: 32%;
 }
 
-.ratingDiv {
-    background-color: '#EACC5E';
-    width: 100px;
-    text-align: 'center';
-    float: 'left'
+.categories {
+    min-height: 42%;
 }
 
-.RatingText {
-    color: 'white'
-}
-
-.avgRateText {
-    margin-left: 30px;
-    float: 'right'
-}
